sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:15: error: not found: value j
      j=getNombreValeurs-i-2
      ^AlgCocktailSort2:16: error: not found: value j
      if (plusPetit(j,j+1)==false){
                    ^AlgCocktailSort2:16: error: not found: value j
      if (plusPetit(j,j+1)==false){
                      ^AlgCocktailSort2:17: error: not found: value j
        echange(j,j+1)
                ^AlgCocktailSort2:17: error: not found: value j
        echange(j,j+1)
                  ^AlgCocktailSort2:18: error: not found: value j
        j=j+1
        ^